// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Carousel
    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
    className="foo"
    dotColor=""
    index={0}
    onChange={[Function]}
    showArrows={true}
    showDots={true}
    showOnImage={false}
    sliderClasses=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Carousel
        afterSlide={[Function]}
        autoGenerateStyleTag={true}
        autoplay={false}
        autoplayInterval={3000}
        beforeSlide={[Function]}
        cellAlign="left"
        cellSpacing={0}
        className="w100 flex pb4"
        dragging={true}
        easing="easeCircleOut"
        edgeEasing="easeElasticOut"
        frameOverflow="hidden"
        framePadding="0px"
        heightMode="max"
        onResize={[Function]}
        pauseOnHover={true}
        renderBottomCenterControls={[Function]}
        renderCenterLeftControls={[Function]}
        renderCenterRightControls={[Function]}
        slideIndex={0}
        slideWidth={1}
        slidesToScroll={1}
        slidesToShow={1}
        speed={500}
        style={Object {}}
        swiping={true}
        transitionMode="scroll"
        vertical={false}
        width="100%"
        withoutControls={false}
        wrapAround={false}
/>,
      "className": "foo flex flex-column justify-center transition",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "afterSlide": [Function],
        "autoGenerateStyleTag": true,
        "autoplay": false,
        "autoplayInterval": 3000,
        "beforeSlide": [Function],
        "cellAlign": "left",
        "cellSpacing": 0,
        "children": null,
        "className": "w100 flex pb4",
        "dragging": true,
        "easing": "easeCircleOut",
        "edgeEasing": "easeElasticOut",
        "frameOverflow": "hidden",
        "framePadding": "0px",
        "heightMode": "max",
        "onResize": [Function],
        "pauseOnHover": true,
        "renderBottomCenterControls": [Function],
        "renderCenterLeftControls": [Function],
        "renderCenterRightControls": [Function],
        "slideIndex": 0,
        "slideWidth": 1,
        "slidesToScroll": 1,
        "slidesToShow": 1,
        "speed": 500,
        "style": Object {},
        "swiping": true,
        "transitionMode": "scroll",
        "vertical": false,
        "width": "100%",
        "withoutControls": false,
        "wrapAround": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Carousel
          afterSlide={[Function]}
          autoGenerateStyleTag={true}
          autoplay={false}
          autoplayInterval={3000}
          beforeSlide={[Function]}
          cellAlign="left"
          cellSpacing={0}
          className="w100 flex pb4"
          dragging={true}
          easing="easeCircleOut"
          edgeEasing="easeElasticOut"
          frameOverflow="hidden"
          framePadding="0px"
          heightMode="max"
          onResize={[Function]}
          pauseOnHover={true}
          renderBottomCenterControls={[Function]}
          renderCenterLeftControls={[Function]}
          renderCenterRightControls={[Function]}
          slideIndex={0}
          slideWidth={1}
          slidesToScroll={1}
          slidesToShow={1}
          speed={500}
          style={Object {}}
          swiping={true}
          transitionMode="scroll"
          vertical={false}
          width="100%"
          withoutControls={false}
          wrapAround={false}
/>,
        "className": "foo flex flex-column justify-center transition",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "afterSlide": [Function],
          "autoGenerateStyleTag": true,
          "autoplay": false,
          "autoplayInterval": 3000,
          "beforeSlide": [Function],
          "cellAlign": "left",
          "cellSpacing": 0,
          "children": null,
          "className": "w100 flex pb4",
          "dragging": true,
          "easing": "easeCircleOut",
          "edgeEasing": "easeElasticOut",
          "frameOverflow": "hidden",
          "framePadding": "0px",
          "heightMode": "max",
          "onResize": [Function],
          "pauseOnHover": true,
          "renderBottomCenterControls": [Function],
          "renderCenterLeftControls": [Function],
          "renderCenterRightControls": [Function],
          "slideIndex": 0,
          "slideWidth": 1,
          "slidesToScroll": 1,
          "slidesToShow": 1,
          "speed": 500,
          "style": Object {},
          "swiping": true,
          "transitionMode": "scroll",
          "vertical": false,
          "width": "100%",
          "withoutControls": false,
          "wrapAround": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Carousel
    arrowNextImage="/assets/images/icon-circle-right-arrow.svg"
    arrowPreviousImage="/assets/images/icon-circle-left-arrow.svg"
    className="w100"
    dotColor=""
    index={0}
    onChange={[Function]}
    showArrows={true}
    showDots={true}
    showOnImage={false}
    sliderClasses=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Carousel
        afterSlide={[Function]}
        autoGenerateStyleTag={true}
        autoplay={false}
        autoplayInterval={3000}
        beforeSlide={[Function]}
        cellAlign="left"
        cellSpacing={0}
        className="w100 flex pb4"
        dragging={true}
        easing="easeCircleOut"
        edgeEasing="easeElasticOut"
        frameOverflow="hidden"
        framePadding="0px"
        heightMode="max"
        onResize={[Function]}
        pauseOnHover={true}
        renderBottomCenterControls={[Function]}
        renderCenterLeftControls={[Function]}
        renderCenterRightControls={[Function]}
        slideIndex={0}
        slideWidth={1}
        slidesToScroll={1}
        slidesToShow={1}
        speed={500}
        style={Object {}}
        swiping={true}
        transitionMode="scroll"
        vertical={false}
        width="100%"
        withoutControls={false}
        wrapAround={false}
/>,
      "className": "w100 flex flex-column justify-center transition",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "afterSlide": [Function],
        "autoGenerateStyleTag": true,
        "autoplay": false,
        "autoplayInterval": 3000,
        "beforeSlide": [Function],
        "cellAlign": "left",
        "cellSpacing": 0,
        "children": null,
        "className": "w100 flex pb4",
        "dragging": true,
        "easing": "easeCircleOut",
        "edgeEasing": "easeElasticOut",
        "frameOverflow": "hidden",
        "framePadding": "0px",
        "heightMode": "max",
        "onResize": [Function],
        "pauseOnHover": true,
        "renderBottomCenterControls": [Function],
        "renderCenterLeftControls": [Function],
        "renderCenterRightControls": [Function],
        "slideIndex": 0,
        "slideWidth": 1,
        "slidesToScroll": 1,
        "slidesToShow": 1,
        "speed": 500,
        "style": Object {},
        "swiping": true,
        "transitionMode": "scroll",
        "vertical": false,
        "width": "100%",
        "withoutControls": false,
        "wrapAround": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Carousel
          afterSlide={[Function]}
          autoGenerateStyleTag={true}
          autoplay={false}
          autoplayInterval={3000}
          beforeSlide={[Function]}
          cellAlign="left"
          cellSpacing={0}
          className="w100 flex pb4"
          dragging={true}
          easing="easeCircleOut"
          edgeEasing="easeElasticOut"
          frameOverflow="hidden"
          framePadding="0px"
          heightMode="max"
          onResize={[Function]}
          pauseOnHover={true}
          renderBottomCenterControls={[Function]}
          renderCenterLeftControls={[Function]}
          renderCenterRightControls={[Function]}
          slideIndex={0}
          slideWidth={1}
          slidesToScroll={1}
          slidesToShow={1}
          speed={500}
          style={Object {}}
          swiping={true}
          transitionMode="scroll"
          vertical={false}
          width="100%"
          withoutControls={false}
          wrapAround={false}
/>,
        "className": "w100 flex flex-column justify-center transition",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "afterSlide": [Function],
          "autoGenerateStyleTag": true,
          "autoplay": false,
          "autoplayInterval": 3000,
          "beforeSlide": [Function],
          "cellAlign": "left",
          "cellSpacing": 0,
          "children": null,
          "className": "w100 flex pb4",
          "dragging": true,
          "easing": "easeCircleOut",
          "edgeEasing": "easeElasticOut",
          "frameOverflow": "hidden",
          "framePadding": "0px",
          "heightMode": "max",
          "onResize": [Function],
          "pauseOnHover": true,
          "renderBottomCenterControls": [Function],
          "renderCenterLeftControls": [Function],
          "renderCenterRightControls": [Function],
          "slideIndex": 0,
          "slideWidth": 1,
          "slidesToScroll": 1,
          "slidesToShow": 1,
          "speed": 500,
          "style": Object {},
          "swiping": true,
          "transitionMode": "scroll",
          "vertical": false,
          "width": "100%",
          "withoutControls": false,
          "wrapAround": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
